{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "onFoot",
            "id": "03c6d8ba-f391-4996-a036-f2d8725c4633",
            "actions": [
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "30a9fbe8-8b18-486f-bc40-078607811b81",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "b0d8e3ce-d899-4dc2-8435-3718d30d8679",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7fef70f1-0508-4e74-ae8d-403bbbbb9dfd",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "88a6d85b-7a79-485e-911f-d8208174b539",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4b239e8a-bd3b-42db-8c19-2eb4a540fd76",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "inGame",
            "id": "b1f851e8-8157-4080-9e0b-a2d443c04606",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "6d198308-03be-492e-ad48-57958960933a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ed2ffe77-c9f1-41a2-8484-ea259643f497",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}